--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,15 @@
   <h1>
     Welcome to {{title}}!!
   </h1>
-  ... Starter Files ...
+  
+  <nav class="navbar navbar-light">
+    <a class="navbar-brand">{{title}}</a>
+    <ul class="nav nav-pills">
+      <li><a [routerLink] = "['/welcome']" class="nav-link">Home</a></li>
+      <li><a [routerLink] = "['/products']" class="nav-link">Product List</a></li>
+    </ul>
+
+  </nav>
+  <router-outlet></router-outlet>
 </div>
+
